# PaperScout

./: .env.example  config.yaml  pyproject.toml
src/paperscout/: cli.py  evals.py  graph.py  llm.py
src/paperscout/agents/: extraction.py  relevance.py  report.py  search.py
src/paperscout/state/: database.py  graph_state.py
src/paperscout/templates/: report.html
src/paperscout/tools/: arxiv.py  email.py  pdf.py  semantic_scholar.py
